--- a/index.html
+++ b/index.html
@@ -12,12 +12,73 @@
 </head>
 
 <body>
-
+    <!--====== heder Section Start ====== -->
     <header>
-        <h1>I using my Website using Bootstrap-5 and Creating Nike react website</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus, non incidunt quibusdam dolore modi
-            commodi! Dolor itaque voluptatem fuga error in iusto dolorum id, sit impedit ad odio esse harum!</p>
+        <section>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+                <div class="container">
+                    <a class="navbar-brand" href="#">
+                        <img src="icons/Logo.png" alt="" width="200" height="51" class="d-inline-block align-text-top">
+
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto  mb-2 mb-lg-0 fs-5 fw-bold">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Product</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About Us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact Us</a>
+                            </li>
+
+
+                        </ul>
+
+                    </div>
+                </div>
+            </nav>
+        </section>
+
+
+
+
+
+        <!--==== heder section End =======-->
     </header>
+
+
+
+    <!--=== Main Section Start=====  -->
+    <main>
+
+
+
+
+        <!--==== Main Section End=====  -->
+    </main>
+
+
+
+
+    <!-- Footer Section Start  -->
+    <footer>
+
+
+
+
+
+        <!--==== Footer Section End====  -->
+    </footer>
 
 
 
