--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!--====== Bootstrap CDN Link ===== -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -47,6 +48,31 @@
                     </div>
                 </div>
             </nav>
+        </section>
+
+        <section class="container mt-5">
+            <div class="row">
+                <div class="col-md-6">
+                    <figure class="w-75 mx-auto">
+                        <img class="img-fluid" src="images/Group 33092.png" alt="">
+                    </figure>
+                </div>
+                <div class="col-md-6 d-flex align-items-center">
+                    <div class="home-content">
+                        <h1>Nike React</h1>
+                        <h2>Infinity Run 2</h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
+                            <button class="btn bg-primary pe-3 text-nowrap mt-4 ">
+                                <svg height="20px" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke="currentColor">
+                                    <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2}
+                                        d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                                </svg>
+                                Buy Now
+                            </button>
+                    </div>
+                </div>
+            </div>
         </section>
 
 
